--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "party-game",
+  "packageManager": "pnpm@8.15.0",
+  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.14.2",
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
