Refactored configs, gateway, errors handling

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,13 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && npm run postbuild",
+    "postbuild": "if [ -d \"dist/apps/api/src\" ]; then cp -r dist/apps/api/src/* dist/ && rm -rf dist/apps dist/packages; fi",
     "dev": "nest start --watch --preserveWatchOutput",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node -r tsconfig-paths/register dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
+    "@party/config": "workspace:*",
     "@party/types": "workspace:*",
     "@prisma/client": "^6.14.0",
     "reflect-metadata": "^0.2.2",
