--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,6 +4,11 @@
     "outDir": "./dist",
     "noEmit": false,
     "module": "CommonJS",
-    "moduleResolution": "node"
-  } 
+    "moduleResolution": "node",
+    "paths": {
+      "@party/*": ["../../packages/*/dist", "../../packages/*/src"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
