--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@party/*": ["../../packages/*/src", "../../packages/*/dist"]
     },
     "allowJs": true,
     "incremental": true,
