--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,1 +1,13 @@
-{ "name": "@party/types", "version": "0.0.0", "main": "src/index.ts" }
+{ 
+  "name": "@party/types", 
+  "version": "0.0.0", 
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
+  }
+}
