--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,10 @@
 {
   "tasks": {
     "dev": { "cache": false, "persistent": true },
-    "build": { "dependsOn": ["^build"], "outputs": ["dist/**", ".next/**"] },
+    "build": { 
+      "dependsOn": ["^build"], 
+      "outputs": ["dist/**", ".next/**", "build/**"]
+    },
     "lint": {},
     "test": { "outputs": ["coverage/**", ".vitest/**"] }
   }
