--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,14 +31,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
