--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -6,7 +6,10 @@
     "noEmit": false,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "module": "CommonJS",
+    "target": "ES2020",
+    "moduleResolution": "Node"
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
