--- a/apps/magic-marker/web/package.json
+++ b/apps/magic-marker/web/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.57.0",
     "axios": "^1.6.2",
     "next": "15.4.6",
+    "openai": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-query": "^3.39.3",
