--- a/package.json
+++ b/package.json
@@ -31,19 +31,31 @@
     "infra:init": "cd infrastructure/terraform && terraform init",
     "infra:plan": "cd infrastructure/terraform && terraform plan",
     "infra:apply": "cd infrastructure/terraform && terraform apply",
-    "infra:destroy": "cd infrastructure/terraform && terraform destroy"
+    "infra:destroy": "cd infrastructure/terraform && terraform destroy",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "turbo": "^2.0.0",
-    "typescript": "^5.5.0",
     "@types/node": "^20.12.0",
     "eslint": "^9.0.0",
-    "prettier": "^3.3.0"
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.6",
+    "prettier": "^3.3.0",
+    "turbo": "^2.0.0",
+    "typescript": "^5.5.0"
   },
   "pnpm": {
     "overrides": {
       "typescript": "^5.5.0",
       "eslint": "^9.0.0"
     }
+  },
+  "lint-staged": {
+    "apps/**/*.{ts,tsx}": [
+      "turbo run lint --filter=./{dir}",
+      "turbo run type-check --filter=./{dir}"
+    ],
+    "apps/**/*.{js,jsx,ts,tsx,json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
