fix: resolve all TypeScript and build errors
- Replace all 'any' types with proper TypeScript types
- Fix Next.js 15 API route parameter handling (async params)
- Add Suspense boundary for useSearchParams() in result page
- Fix error handling with proper type casting
- Remove unused imports and variables
- Update error handlers to use unknown type with proper casting
- Fix OpenAI error handling in all catch blocks
- Fix lint-staged configuration for monorepo
- Ensure build passes with zero TypeScript errors

All critical build errors resolved, application now builds successfully.

--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "lint-staged": {
     "apps/**/*.{ts,tsx}": [
-      "turbo run lint --filter=./{dir}",
-      "turbo run type-check --filter=./{dir}"
+      "turbo run lint --filter=./apps/magic-marker/web",
+      "turbo run type-check --filter=./apps/magic-marker/web"
     ],
     "apps/**/*.{js,jsx,ts,tsx,json,css,md}": [
       "prettier --write"
