feat: Add comprehensive local development setup with Supabase integration
- Add setup-magic-marker.sh script for automated local development setup
- Add dev-magic-marker.sh script that automatically starts Supabase
- Update package.json with new Supabase management scripts
- Update documentation to reflect local Supabase development workflow
- Add local-development-guide.md with detailed setup instructions
- Fix OpenAI API key authentication by moving client-side calls to server-side API routes
- Create /api/conversational-question endpoint for server-side processing
- Update environment configuration for local vs production setups
- Add comprehensive troubleshooting and debugging guides

This provides a seamless development experience where developers can run
'pnpm setup:magic-marker' followed by 'pnpm dev:magic-marker' to get
everything running with local Supabase automatically.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "dev:portal": "turbo run dev --filter=@tb2/portal",
     "dev:party-game": "turbo run dev --filter=@tb2/party-game-*",
-    "dev:magic-marker": "turbo run dev --filter=@tb2/magic-marker-*",
+    "dev:magic-marker": "./scripts/dev-magic-marker.sh",
+    "dev:magic-marker:raw": "turbo run dev --filter=@tb2/magic-marker-*",
+    "setup:magic-marker": "./scripts/setup-magic-marker.sh",
+    "supabase:start": "cd apps/magic-marker/web && supabase start",
+    "supabase:stop": "cd apps/magic-marker/web && supabase stop",
+    "supabase:status": "cd apps/magic-marker/web && supabase status",
+    "supabase:logs": "cd apps/magic-marker/web && supabase logs",
+    "supabase:reset": "cd apps/magic-marker/web && supabase db reset",
+    "supabase:dashboard": "cd apps/magic-marker/web && supabase dashboard",
     "migrate:party-game": "pnpm --filter @tb2/party-game-api prisma migrate dev",
     "seed:party-game": "pnpm --filter @tb2/party-game-api prisma db seed",
     "docker:up": "docker-compose -f docker-compose.dev.yml up -d",
