--- a/apps/magic-marker/web/package.json
+++ b/apps/magic-marker/web/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.0",
     "axios": "^1.6.2",
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "openai": "^4.0.0",
     "react": "19.1.0",
