--- a/apps/mighty-team-designs/package.json
+++ b/apps/mighty-team-designs/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "node-fetch": "^3.3.2",
     "openai": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
