--- a/apps/mighty-team-designs/package.json
+++ b/apps/mighty-team-designs/package.json
@@ -37,6 +37,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
