--- a/apps/mighty-team-designs/package.json
+++ b/apps/mighty-team-designs/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.0",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "node-fetch": "^3.3.2",
     "openai": "^4.0.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-query": "^3.39.3",
