fix: Try different Python command approach for Railway
- Revert to 'python' command in both railway.json and nixpacks.toml
- Add explicit nixPkgs setup for python39 in nixpacks.toml
- Railway Nix environment might use 'python' not 'python3'
- This should resolve the command not found error

--- a/apps/image-processor/nixpacks.toml
+++ b/apps/image-processor/nixpacks.toml
@@ -1,2 +1,11 @@
+[phases.setup]
+nixPkgs = ["python39"]
+
+[phases.install]
+cmds = ["echo 'No dependencies to install'"]
+
+[phases.build]
+cmds = ["echo 'Build complete'"]
+
 [start]
-cmd = "python3 test_server.py"
+cmd = "python test_server.py"
