feat: Switch to real FastAPI application on Railway
- Restore requirements.txt with all dependencies
- Update railway.json to use uvicorn with src.main:app
- Update nixpacks.toml to install dependencies and start real app
- Switch from test server to production FastAPI application
- Ready to deploy the full image processor API

--- a/apps/image-processor/nixpacks.toml
+++ b/apps/image-processor/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["python39"]
 
 [phases.install]
-cmds = ["echo 'No dependencies to install'"]
+cmds = ["pip install -r requirements.txt"]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "python test_server.py"
+cmd = "python -m uvicorn src.main:app --host 0.0.0.0 --port $PORT"
