feat: Complete Turbo repo optimization for image-processor deployment
- Update turbo.json to use Dockerfile instead of deprecated nixpacks.toml
- Add exclusions for tests, docs, and README to avoid unnecessary deployments
- Make deployment script executable
- Optimize change detection for more efficient CI/CD

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,17 @@
       "outputs": ["dist/**", ".next/**", "build/**", "__pycache__/**"],
       "env": ["NODE_ENV", "NEXT_PUBLIC_*", "PYTHONPATH"]
     },
+    "deploy:image-processor": {
+      "cache": false,
+      "dependsOn": ["build"],
+      "inputs": [
+        "apps/image-processor/**",
+        "!apps/image-processor/tests/**",
+        "!apps/image-processor/docs/**",
+        "!apps/image-processor/README.md"
+      ],
+      "outputs": []
+    },
     "lint": {
       "dependsOn": ["^build"],
       "outputs": []
