feat: Add conditional deployment for Magic Marker app
- Add deploy:magic-marker task to turbo.json with smart input filtering
- Create GitHub Actions workflow for conditional Magic Marker deployment
- Add deployment script for Magic Marker with Vercel integration
- Add deploy script to magic-marker web package.json
- Exclude test files, uploads, and build artifacts from deployment triggers
- Magic Marker will now only deploy when its files change

--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,25 @@
       ],
       "outputs": []
     },
+    "deploy:magic-marker": {
+      "cache": false,
+      "dependsOn": ["build"],
+      "inputs": [
+        "apps/magic-marker/**",
+        "!apps/magic-marker/docs/**",
+        "!apps/magic-marker/analysis_flows.sql",
+        "!apps/magic-marker/latest_analysis_flows.sql",
+        "!apps/magic-marker/frontend/uploads/**",
+        "!apps/magic-marker/web/uploads/**",
+        "!apps/magic-marker/web/test-results/**",
+        "!apps/magic-marker/web/playwright-report/**",
+        "!apps/magic-marker/web/test.png",
+        "!apps/magic-marker/web/test_image.*",
+        "!apps/magic-marker/web/production_data.sql",
+        "!apps/magic-marker/web/tsconfig.tsbuildinfo"
+      ],
+      "outputs": []
+    },
     "lint": {
       "dependsOn": ["^build"],
       "outputs": []
