--- a/apps/magic-marker/web/package.json
+++ b/apps/magic-marker/web/package.json
@@ -16,6 +16,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
+    "deploy": "vercel --prod",
     "prepare": "husky"
   },
   "dependencies": {
