fix: Improve .dockerignore to ensure proper build context for Railway
- Add explicit inclusion of apps/ directory structure
- Ensure apps/image-processor/src/ and all subdirectories are included
- Revert to simple COPY apps/image-processor/src/ ./src/ command
- This should resolve the 'validators directory not found' error
- Tested locally and confirmed Docker build works correctly

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,11 @@
 *
 
 # Include only the image-processor app
+!apps/
 !apps/image-processor/
-!apps/image-processor/**
+!apps/image-processor/requirements.txt
+!apps/image-processor/src/
+!apps/image-processor/src/**
 
 # Ignore development files within image-processor
 apps/image-processor/tests/
