fix: Remove conflicting root Dockerfiles
- Remove Dockerfile and Dockerfile.railway from monorepo root
- Railway should now use the Dockerfile in apps/image-processor/
- This should prevent Railway from using the wrong build context
- The apps/image-processor/Dockerfile uses correct relative paths

--- a/temp-docker-build/Dockerfile
+++ b/temp-docker-build/Dockerfile
@@ -11,13 +11,13 @@ ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 WORKDIR /app
 
 # Copy requirements first for better caching
-COPY apps/image-processor/requirements.txt .
+COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code - use wildcard to copy all files at once
-COPY apps/image-processor/src/ ./src/
+# Copy application code
+COPY src/ ./src/
 
 # Create necessary directories
 RUN mkdir -p /app/temp /app/output /app/storage
