--- a/apps/image-processor/package.json
+++ b/apps/image-processor/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "python src/main.py",
     "build": "echo 'Python build - no compilation needed'",
-    "start": "python src/main.py",
+    "start": "python -m uvicorn src.main:app --host 0.0.0.0 --port $PORT",
     "test": "pytest",
     "test:coverage": "pytest --cov=src --cov-report=html",
     "lint": "black src/ && isort src/",
