--- a/apps/image-processor/env.example
+++ b/apps/image-processor/env.example
@@ -1,6 +1,7 @@
 # Storage Configuration
 STORAGE_TYPE=local  # Options: local, supabase, none
-LOCAL_STORAGE_DIR=./storage
+LOCAL_STORAGE_PATH=./storage
+LOCAL_STORAGE_BASE_URL=http://localhost:8000/api/v1/storage
 
 # Supabase Configuration (only used when STORAGE_TYPE=supabase)
 SUPABASE_URL=your_supabase_url_here
