chore: Add output and temp directories to .gitignore
- Add **/output/ and **/temp/ to .gitignore to exclude generated files
- Remove output files from git tracking
- These directories contain processed images that shouldn't be committed

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ lerna-debug.log*
 **/test-images/
 **/temp-images/
 
+# Image processor output
+**/output/
+**/temp/
+
 # IDEs and editors
 /.idea
 .project
