--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,10 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 **/dist/
 
 .vercel
+
+# Backup files
+**/backup/
+**/backup-*.json
+**/backup-*.js
+**/storage-backup.json
+**/latest-backup.json
