--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,21 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 **/backup-*.js
 **/storage-backup.json
 **/latest-backup.json
+
+# Large model files
+*.pth
+*.bin
+*.model
+*.weights
+*.h5
+*.pkl
+*.pickle
+**/models/
+**/checkpoints/
+
+# Test and debug files
+test-*.js
+debug-*.js
+temp-*.js
+*.test.js
+*.spec.js
