--- a/railway-deploy/requirements.txt
+++ b/railway-deploy/requirements.txt
@@ -4,11 +4,12 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
 
-# Image processing (lightweight)
+# Image processing
 Pillow==10.1.0
 numpy==1.24.3
+opencv-python-headless==4.8.1.78
 
-# AI-powered background removal (lightweight)
+# AI-powered background removal
 rembg==2.0.50
 
 # Database and storage
