Add ultra-minimal health check server for Railway testing
- Created test_health_server.py with basic HTTP server
- Updated nixpacks.toml and Dockerfile to use test server
- Fixed railway.json to use nixpacks builder consistently
- This should resolve the service unavailable errors
- Test server only needs Python standard library

--- a/railway-deploy/nixpacks.toml
+++ b/railway-deploy/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["pip install -r requirements.txt"]
 cmds = ["echo 'Python build - no compilation needed'"]
 
 [start]
-cmd = "python -m uvicorn src.main_minimal:app --host 0.0.0.0 --port $PORT"
+cmd = "python test_health_server.py"
