--- a/railway-deploy/Dockerfile
+++ b/railway-deploy/Dockerfile
@@ -30,4 +30,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the application
-CMD ["sh", "-c", "python -m uvicorn src.main_minimal:app --host 0.0.0.0 --port $PORT"]
+CMD ["sh", "-c", "python test_health_server.py"]
