Add missing IMAGE_PROCESSOR_API_KEY to turbo.json
- Added IMAGE_PROCESSOR_API_KEY to both dev and build tasks
- Fixes Vercel build warning about missing environment variable
- Ensures the API key is available to the mighty-team-designs app

--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,7 @@
         "SUPABASE_SERVICE_ROLE_KEY",
         "OPENAI_API_KEY",
         "IMAGE_PROCESSOR_BASE_URL",
+        "IMAGE_PROCESSOR_API_KEY",
         "DATABASE_URL",
         "STORAGE_TYPE",
         "LOCAL_STORAGE_PATH",
@@ -31,6 +32,7 @@
         "SUPABASE_SERVICE_ROLE_KEY",
         "OPENAI_API_KEY",
         "IMAGE_PROCESSOR_BASE_URL",
+        "IMAGE_PROCESSOR_API_KEY",
         "DATABASE_URL",
         "STORAGE_TYPE",
         "LOCAL_STORAGE_PATH",
