Add debug startup script to diagnose Railway issues
- Created debug_startup.py with detailed logging
- Added Procfile as alternative to nixpacks
- Simplified railway.toml to remove potential conflicts
- This will help identify why the service is not starting
- Debug script prints environment and startup info

--- a/railway-deploy/nixpacks.toml
+++ b/railway-deploy/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["pip install -r requirements.txt"]
 cmds = ["echo 'Python build - no compilation needed'"]
 
 [start]
-cmd = "python test_health_server.py"
+cmd = "python debug_startup.py"
