--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "apps/magic-marker/web/package.json",
-      "use": "@vercel/next"
+      "src": "apps/mighty-team-designs/package.json",
+      "use": "@vercel/next",
+      "config": {
+        "distDir": ".next"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "apps/mighty-team-designs/$1"
     }
   ]
 }
