--- a/apps/image-processor/requirements.txt
+++ b/apps/image-processor/requirements.txt
@@ -7,6 +7,7 @@ python-multipart==0.0.6
 # Image processing (lightweight)
 Pillow==10.1.0
 numpy==1.24.3
+scipy==1.11.4
 
 # AI-powered background removal (lightweight)
 rembg==2.0.50
