--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "apps/**/*.{js,jsx,ts,tsx,json,css,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.57.0"
   }
 }
